feat(requirements) Add flake8 and pylint dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,28 @@
 anyio==3.5.0
 asgiref==3.5.0
+astroid==2.9.3
 click==8.0.4
 fastapi==0.75.0
+flake8==4.0.1
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.6.1
+platformdirs==2.5.1
+pycodestyle==2.8.0
 pydantic==1.9.0
+pyflakes==2.4.0
+pylint==2.12.2
 python-dotenv==0.19.2
 PyYAML==6.0
 sniffio==1.2.0
 starlette==0.17.1
+toml==0.10.2
 typing-extensions==4.1.1
 uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8
 websockets==10.2
+wrapt==1.13.3
