--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ idna==3.3
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
+pdf2image==1.16.0
+Pillow==9.0.1
 platformdirs==2.5.1
 pycodestyle==2.8.0
 pydantic==1.9.0
