--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ python-dotenv==0.19.2
 PyYAML==6.0
 sniffio==1.2.0
 starlette==0.17.1
+termcolor==1.1.0
 toml==0.10.2
 typing-extensions==4.1.1
 uvicorn==0.17.6
