--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,62 @@
 anyio==3.5.0
 asgiref==3.5.0
 astroid==2.9.3
+CacheControl==0.12.10
+cachetools==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.0.4
+Deprecated==1.2.13
 fastapi==0.75.0
+firebase-admin==5.2.0
 flake8==4.0.1
 fpdf==1.7.2
+google-api-core==2.7.1
+google-api-python-client==2.42.0
+google-auth==2.6.2
+google-auth-httplib2==0.1.0
+google-cloud-core==2.2.3
+google-cloud-firestore==2.4.0
+google-cloud-storage==2.2.1
+google-crc32c==1.3.0
+google-resumable-media==2.3.2
+googleapis-common-protos==1.56.0
+grpcio==1.44.0
+grpcio-status==1.44.0
 h11==0.13.0
+httplib2==0.20.4
 httptools==0.4.0
 idna==3.3
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
+msgpack==1.0.3
+packaging==21.3
 pdf2image==1.16.0
 Pillow==9.0.1
 platformdirs==2.5.1
+proto-plus==1.20.3
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pydantic==1.9.0
 pyflakes==2.4.0
 pylint==2.12.2
+pyparsing==3.0.7
 python-dotenv==0.19.2
 python-multipart==0.0.5
 PyYAML==6.0
+requests==2.27.1
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 starlette==0.17.1
 termcolor==1.1.0
 toml==0.10.2
 typing-extensions==4.1.1
+uritemplate==4.1.1
+urllib3==1.26.9
 uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8
